--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "local": "./node_modules/.bin/nodemon -L --ignore public/",
-    "db:reset": "node bin/resetdb.js"
+    "db:reset": "node bin/resetdb.js",
+    "sass-watch": "sass sass:public/styles --watch --poll --no-source-map"
   },
   "author": "Lighthouse Labs",
   "license": "ISC",
@@ -15,8 +16,10 @@
     "chalk": "^2.4.2",
     "dotenv": "^2.0.0",
     "ejs": "^2.6.2",
+    "ejs-lint": "^1.2.1",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
+    "normalize.css": "^8.0.1",
     "pg": "^8.5.0",
     "pg-native": "^3.0.0",
     "sass": "^1.35.1"
